--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.application.name=ride_sharing
-spring.datasource.url=jdbc:mysql://root:nxWbxOiKqNZaqsQaesWsUYJwNvSgwlLx@junction.proxy.rlwy.net:16801/railway
+# JDBC connection configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=user
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+# Hibernate dialect for MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=8081
