--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
 
-# Hibernate dialect for MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# Hibernate & JPA configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=tru
+
+# Optional: MySQL dialect selection (auto-detected; no need to set explicitly)
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Suppress JTA warning (if not using JTA)
+spring.jpa.properties.hibernate.transaction.coordinator_class=jdbc
+
+# Server configuration
 server.port=8081
