TripOTP added and sharing the link

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.properties.hibernate.transaction.coordinator_class=jdbc
 
 # Server configuration
 server.port=8081
+twilio.application_sid = AC9ff07545ab5c17c3f82563d1065d3156
+twilio.application_auth = c172e1d5664872a86e4aecb67e4ea639
+twilio.ph_number = +918328596959
